vl-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vlapp
  name: vlapp
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: vlapp
  type: NodePort
status:
  loadBalancer: {}
